# rust-course

./: .gitignore  Cargo.toml  README.md  REALWORLD.md
01_basics/: README.md
01_basics/examples/: advanced.rs
01_basics/src/: lib.rs
02_ownership/: README.md
02_ownership/examples/: advanced.rs
02_ownership/src/: lib.rs
03_structs_enums/: README.md
03_structs_enums/examples/: advanced.rs
03_structs_enums/src/: lib.rs
04_collections/examples/: advanced.rs
04_collections/src/: lib.rs
05_error_handling/: README.md
05_error_handling/examples/: advanced.rs
05_error_handling/src/: lib.rs
06_generics/examples/: advanced.rs
06_generics/src/: lib.rs
07_lifetimes/examples/: advanced.rs
07_lifetimes/src/: lib.rs
08_traits/examples/: advanced.rs
08_traits/src/: lib.rs
09_closures_iterators/examples/: advanced.rs
09_closures_iterators/src/: lib.rs
10_concurrency/: README.md
10_concurrency/examples/: advanced.rs
10_concurrency/src/: lib.rs
11_smart_pointers/examples/: advanced.rs
11_smart_pointers/src/: lib.rs
12_advanced/examples/: advanced.rs
12_advanced/src/: lib.rs
projects/chat_app/: Cargo.toml
projects/cli_tool/: Cargo.toml
projects/web_server/: Cargo.toml
solutions/: README.md
solutions/01_basics/: README.md
solutions/02_ownership/: README.md
solutions/03_structs_enums/: README.md
solutions/04_collections/: README.md
solutions/05_error_handling/: README.md
solutions/06_generics/: README.md
solutions/07_lifetimes/: README.md
solutions/08_traits/: README.md
solutions/09_closures_iterators/: README.md
(+6 files in other folders)
